--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -1,6 +1,6 @@
 </main>
 
-<footer class="school-footer mt-5">
+<footer class="school-footer">
   <div class="container">
     <div class="row footer-content">
       <div class="footer-section col-md-4">
@@ -29,11 +29,11 @@
         <p><i class="fas fa-phone-alt"></i> <a href="tel:+911234567890">+91 12345 67890</a></p>
         <p><i class="fas fa-envelope"></i> <a href="mailto:shreeclasses@gmail.com">shreeclasses@gmail.com</a></p>
         <div class="social-icons">
-          <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+          <a href="#" class="social-icon text-primary bg-light"><i class="fab fa-facebook-f "></i></a>
+          <a href="#" class="social-icon text-primary bg-light"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="social-icon text-danger bg-light"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-icon text-primary bg-light"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" class="social-icon text-success bg-light"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
     </div>
