--- a/views/user/class&courses.ejs
+++ b/views/user/class&courses.ejs
@@ -15,7 +15,7 @@
 
       --secondary: #2B2B2B;
 
-      --accent: #4cc9f0;
+      --accent: #de3319;
       --success: #4ade80;
       --warning: #f59e0b;
       --danger: #ef4444;
