--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -7,7 +7,7 @@
     :root {
         --primary: #4361ee;
         --secondary: #3f37c9;
-        --accent: #4cc9f0;
+        --accent: #e92412;
         --light: #ffffff;
         --dark: #212529;
         --gray: #6c757d;
