class and coursses page and new page add and edit
changess

--- a/views/user/class&courses.ejs
+++ b/views/user/class&courses.ejs
@@ -492,7 +492,7 @@
             </div>
             <br>
             <br>
-            <a href="#class11" class="btn">Explore Class 11 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class11" class="btn">Explore Class 11 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
