--- a/views/user/class5.ejs
+++ b/views/user/class5.ejs
@@ -154,11 +154,11 @@
     }
 
     .class-card {
-      background: #e6f0ff;
+      background: linear-gradient(135deg, #C8102E, #2B2B2B);
       padding: 14px 22px;
       border-radius: 10px;
       font-weight: 600;
-      color: #003366;
+      color:white;
       font-size: 16px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
       transition: 0.3s ease;
@@ -236,14 +236,14 @@
    <h2 style="text-align:center; margin-top: 40px; color:#004080;">🎓 Explore More Classes</h2>
 
   <div class="class-card-container">
-    <a href="/class5" class="class-card">Class 5th</a>
-    <a href="/class6" class="class-card">Class 6th</a>
-    <a href="/class7" class="class-card">Class 7th</a>
-    <a href="/class8" class="class-card">Class 8th</a>
-    <a href="/class9" class="class-card">Class 9th</a>
-    <a href="/class10" class="class-card">Class 10th</a>
-    <a href="/class11" class="class-card">Class 11th</a>
-    <a href="/class12" class="class-card">Class 12th</a>
+    <a href="/class5" class="class-card">Class 5<sup>th</sup></a>
+    <a href="/class6" class="class-card">Class 6<sup>th</sup></a>
+    <a href="/class7" class="class-card">Class 7<sup>th</sup></a>
+    <a href="/class8" class="class-card">Class 8<sup>th</sup></a>
+    <a href="/class9" class="class-card">Class 9<sup>th</sup></a>
+    <a href="/class10" class="class-card">Class 10<sup>th</sup></a>
+    <a href="/class11" class="class-card">Class 11<sup>th</sup></a>
+    <a href="/class12" class="class-card">Class 12<sup>th</sup></a>
   </div>
 
 
@@ -393,7 +393,7 @@
     }
 
     .schedule-card img {
-      width: 100%;
+      /* width: 100%; */
       height: 250px;
       object-fit: contain;
       /* background: linear-gradient(135deg, #C8102E, #2B2B2B); */
@@ -594,12 +594,27 @@
           <li><strong>Platform:</strong> Zoom</li>
           <li><strong>Includes:</strong> Digital Notes, MCQs</li>
            <li><strong style="color: red;">📘 Study Material: 👉</strong> <a href="https://cdn1.byjus.com/wp-content/uploads/2019/06/Maharashtra-board-class-5-Marathi-Textbook.pdf" target="_blank">Open PDF</a></li>
-           
         </ul>
       </div>
     </div>
   </div>
 
+ <div style="text-align: center;">
+  <a href="/contact" class="contact-btn" style="
+    display: inline-block;
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  ">
+    📞 Contact Us
+  </a>
+</div>
 
 </section>
 
