--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -20,6 +20,14 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Required for Owl -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
+<!-- ck editor  -->
+
+<script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js"></script>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
+
   <style>
    .custom-section {
   background-color: #fff;
@@ -350,7 +358,35 @@
       .main-content {
         margin-left: 0 !important;
       }
+      
     }
+  </style>
+
+  <style>
+        .banner {
+  width: 100%;
+  height: 50px;
+  background: linear-gradient(to right, #4b3f92, #4b3f92, white);
+  position: relative;
+  overflow: hidden;
+}
+
+.stripes {
+  position: absolute;
+  top: 0;
+  left: 70%;
+  width: 50px;
+  height: 100%;
+  background: repeating-linear-gradient(
+    -45deg,
+    #fbb034,
+    #fbb034 20px,
+    #f15a24 20px,
+    #f15a24 40px
+  );
+  transform: skewX(-20deg);
+  opacity: 0.9;
+}
   </style>
 </head>
 <body>
@@ -361,13 +397,11 @@
   <div class="sidebar">
     <div class="logo"><i class="fas fa-graduation-cap"></i><h1>EduManage</h1></div>
     <a href="/admin" class="menu-item"><i class="fas fa-home"></i><span class="menu-text">Dashboard</span></a>
-    <div class="menu-divider">Teacher</div>
     
-    <a href="/admin/my_classes" class="menu-item"><i class="fas fa-users"></i><span class="menu-text">My Classes</span></a>
+    <a href="/admin/about_class" class="menu-item"><i class="fa-solid fa-address-card"></i><span class="menu-text">About class</span></a>
     <a href="/admin/assignment" class="menu-item"><i class="fas fa-tasks"></i><span class="menu-text">Assignments</span></a>
     <a href="/admin/study_material" class="menu-item"><i class="fas fa-book"></i><span class="menu-text">Study Materials</span></a>
     <a href="/admin/attendance" class="menu-item"><i class="fas fa-calendar-check"></i><span class="menu-text">Attendance</span></a>
-     <div class="menu-divider">General</div>
     <a href="/admin/announcement" class="menu-item"><i class="fas fa-bullhorn"></i><span class="menu-text">Announcements</span></a>
     <a href="#" class="menu-item"><i class="fas fa-comments"></i><span class="menu-text">Feedback</span></a>
   </div>
