--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -275,7 +275,7 @@
                             <li><i class="fas fa-check-circle text-success"></i> Social Studies Projects</li>
                             <li><i class="fas fa-check-circle text-success"></i> Creative Writing</li>
                         </ul>
-                        <a href="" class="class-btn bg-primary"">Explore Class</a>
+                        <a href="/courses" class="class-btn bg-primary"">Explore Class</a>
                     </div>
                 </div>
                 
@@ -292,7 +292,7 @@
                             <li><i class="fas fa-check-circle text-success"></i> History & Geography</li>
                             <li><i class="fas fa-check-circle text-success"></i> Language Development</li>
                         </ul>
-                        <a href="#" class="class-btn bg-primary"">Explore Class</a>
+                        <a href="/courses" class="class-btn bg-primary"">Explore Class</a>
                     </div>
                 </div>
                 
@@ -309,7 +309,7 @@
                             <li><i class="fas fa-check-circle text-success"></i> Comprehensive Language</li>
                             <li><i class="fas fa-check-circle text-success"></i> Career Guidance</li>
                         </ul>
-                        <a href="#" class="class-btn bg-primary"">Explore Class</a>
+                        <a href="/courses" class="class-btn bg-primary"">Explore Class</a>
                     </div>
                 </div>
                
