--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -16,9 +16,6 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/css/navbar.css"/>
-
-  <!-- ---------------------------- -->
-   
 </head>
 <body>
 
@@ -34,7 +31,27 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-3">
-        <li class="nav-item"><a class="nav-link offer-link text-black px-3 rounded" href="/new_offer">🎉 New Offer</a></li>
+<li class="nav-item">
+  <a href="/new_offer" class="button">
+    <span class="inner">
+      🎉 New Offer
+    </span>
+    <span class="fold"></span>
+    <span class="points_wrapper">
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+      <span class="point"></span>
+    </span>
+  </a>
+</li>
+
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/courses" class="nav-link">Class & Courses</a></li>
