--- a/views/user/new_offer.ejs
+++ b/views/user/new_offer.ejs
@@ -1216,7 +1216,7 @@
                   
                   <div class="card-actions">
                     <button class="btn btn-explore explore-btn" data-offer="<%= offer.title %>" data-price="<%= offer.price %>">Explore <i class="fas fa-chevron-right"></i></button>
-                    <button class="btn btn-buy buy-btn" data-offer="<%= offer.title %>" data-price="<%= offer.price %>">Buy Now <i class="fas fa-shopping-cart"></i></button>
+                    <button id="rzp-button1" class="btn btn-buy buy-btn" data-offer="<%= offer.title %>" data-price="<%= offer.price %>">Buy Now <i class="fas fa-shopping-cart"></i></button>
                   </div>
                   
                   <div class="countdown-timer mt-3">Offer ends in: <span class="countdown" data-end="2023-12-31T23:59:59">2d 14h 30m</span></div>
