--- a/views/user/class&courses.ejs
+++ b/views/user/class&courses.ejs
@@ -520,7 +520,7 @@
             </div>
             <br>
             <br>
-            <a href="#class12" class="btn">Explore Class 12 <i class="fas fa-arrow-right"></i></a>
+            <a href="/class12" class="btn">Explore Class 12 <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
 
