--- a/views/admin/about_class.ejs
+++ b/views/admin/about_class.ejs
@@ -49,7 +49,7 @@
 
         <div class="col-md-12 mt-4">
              Class Address
-            <textarea class="form-control mt-2 editor" type="text"  name="address" id=""><%-contact_info.address%></textarea>
+            <textarea class="form-control mt-2" type="text"  name="address" id=""><%-contact_info.address%></textarea>
         </div>
         <div class="col-md-12 text-center mt-4">
             <button class="btn btn-primary">Save Information</button>
