--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -26,15 +26,15 @@
       </div>
       <div class="footer-section col-md-4">
         <h4>Contact Us</h4>
-        <p><i class="fas fa-map-marker-alt"></i> 123 School Road, Jalna, Maharashtra</p>
-        <p><i class="fas fa-phone-alt"></i> <a href="tel:+911234567890">+91 12345 67890</a></p>
-        <p><i class="fas fa-envelope"></i> <a href="mailto:shreeclasses@gmail.com">shreeclasses@gmail.com</a></p>
+        <p><i class="fas fa-map-marker-alt"></i><%-contact_info.address%></p>
+        <p><i class="fas fa-phone-alt"></i> <a href="tel:+911234567890"><%-contact_info.phone%></a></p>
+        <p><i class="fas fa-envelope"></i> <a href="mailto:shreeclasses@gmail.com"><%-contact_info.email%></a></p>
         <div class="social-icons">
-          <a href="#" class="social-icon text-primary bg-light"><i class="fab fa-facebook-f "></i></a>
-          <a href="#" class="social-icon text-primary bg-light"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-icon text-danger bg-light"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social-icon text-primary bg-light"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#" class="social-icon text-success bg-light"><i class="fab fa-whatsapp"></i></a>
+          <a href="<%-contact_info.facebook%>" class="social-icon text-primary bg-light"><i class="fab fa-facebook-f "></i></a>
+          <a href="<%-contact_info.twitter%>" class="social-icon text-primary bg-light"><i class="fab fa-twitter"></i></a>
+          <a href="<%-contact_info.instagram%>" class="social-icon text-danger bg-light"><i class="fab fa-instagram"></i></a>
+          <a href="<%-contact_info.linkedin%>" class="social-icon text-primary bg-light"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://wa.me/<%-contact_info.whatsapp%>" class="social-icon text-success bg-light"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
     </div>
