--- a/views/user/navbar.ejs
+++ b/views/user/navbar.ejs
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm" style="height:70px;">
   <div class="container-fluid px-3">
     <a class="navbar-brand d-flex align-items-center" href="/">
-      <img src="/Aniket2.png" alt="Logo"/>
+      <img src="/uplaod/<%-contact_info.logo%>" alt="Logo"/>
       <span class="fw-bold gradient-text">Classes</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
