--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -329,10 +329,10 @@
                 <h2>Ready to Transform Your Learning Experience?</h2>
                 <p>Join thousands of students and teachers who are already using EduSync to make education more engaging and effective.</p>
                 <div class="cta-buttons">
-                    <a href="tel:918010431965" class="btn-light cta-btn text-primary" id="call-btn">
+                    <a href="tel:+91<%-contact_info.phone%>" class="btn-light cta-btn text-primary" id="call-btn">
                         <i class="fas fa-phone-alt  text-primary" style="margin-right: 6px;"></i>Enquiry Now
                     </a>
-                    <a href="https://wa.me/918010431965" class="btn-light cta-btn text-success" target="_blank" id="join-whatsapp-btn">
+                    <a href="https://wa.me/<%-contact_info.whatsapp%>" class="btn-light cta-btn text-success" target="_blank" id="join-whatsapp-btn">
                         <i class="fab fa-whatsapp text-success" style="margin-right: 6px;"></i>WhatsApp
                     </a>
                 </div>
