--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -229,22 +229,19 @@
             <div class="info-item">
                 <i class="fas fa-map-marker-alt"></i>
                 <div>
-                    <p>Room 305, 123 University Ave</p>
-                    <p>Boston, MA 02115</p>
+                    <p><%-contact_info.address%></p>
                 </div>
             </div>
             <div class="info-item">
                 <i class="fas fa-phone-alt"></i>
                 <div>
-                    <p>Main: (617) 555-0123</p>
-                    <p>Support: (617) 555-0456</p>
+                    <p>Main:<%-contact_info.phone%></p>
                 </div>
             </div>
             <div class="info-item">
                 <i class="fas fa-envelope"></i>
                 <div>
-                    <p>info@classportal.edu</p>
-                    <p>support@classportal.edu</p>
+                    <p><%-contact_info.email%></p>
                 </div>
             </div>
             <div class="info-item">
