--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -230,12 +230,14 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <div>
                     <p><%-contact_info.address%></p>
+                    <p>Boston, MA 02115</p>
                 </div>
             </div>
             <div class="info-item">
                 <i class="fas fa-phone-alt"></i>
                 <div>
-                    <p>Main:<%-contact_info.phone%></p>
+                    <p>Main: (+91) <%-contact_info.phone%></p>
+                    <p>Support: (+91) 7249329153</p>
                 </div>
             </div>
             <div class="info-item">
