--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -222,7 +222,7 @@
     <p>Reach out to us with any questions or feedback.</p>
 </div>
 
-<div class="contact-container">
+<div class="contact-container mb-4">
     <div class="contact-area">
         <div class="card">
             <h2 class="section-title">Get In Touch</h2>
