--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -254,10 +254,10 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="<%-contact_info.facebook%>"><i class="fab fa-facebook-f"></i></a>
+                <a href="<%-contact_info.twitter%>"><i class="fab fa-twitter"></i></a>
+                <a href="<%-contact_info.instagram%>"><i class="fab fa-instagram"></i></a>
+                <a href="<%-contact_info.Linkedin%>"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
 
